--- a/css/style.css
+++ b/css/style.css
@@ -737,12 +737,15 @@
 
 	#header {
 		background-attachment: scroll,							scroll,					fixed;
-		background-image: url("images/top-3200.svg"), url("images/overlay.png"), url("../images/header.jpg");
-		background-position: bottom center,					top left,				center center;
-		background-repeat: repeat-x,						repeat,					no-repeat;
-		background-size: 3200px 460px,					auto,					cover;
+		/*background-image: url("images/top-3200.svg"), url("images/overlay.png"), url("../images/header.jpg");*/
+		/*background-position: bottom center,					top left,				center center;*/
+		/*background-repeat: repeat-x,						repeat,					no-repeat;*/
+		background-image: url("images/top-3200.svg"), url("images/sethu.jpg"), url("../images/header.jpg");
+		background-position: bottom center,					center center,				center center;
+		background-repeat: repeat-x,						no-repeat,					no-repeat;
+		background-size: 3200px 460px,					cover,					cover;
 		color: rgba(255, 255, 255, 0.8);
-		padding: 10em 0 20em 0;
+		padding: 10em 0 20em 0;s
 		position: relative;
 		text-align: center;
 	}
