--- a/css/style.css
+++ b/css/style.css
@@ -736,7 +736,7 @@
 /* Header */
 
 	#header {
-		background-attachment: scroll,							scroll,					fixed;
+		background-attachment: fixed,							scroll,					fixed;
 		/*background-image: url("images/top-3200.svg"), url("images/overlay.png"), url("../images/header.jpg");*/
 		/*background-position: bottom center,					top left,				center center;*/
 		/*background-repeat: repeat-x,						repeat,					no-repeat;*/
