--- a/css/style.css
+++ b/css/style.css
@@ -736,14 +736,14 @@
 /* Header */
 
 	#header {
-		background-attachment: fixed,							scroll,					fixed;
+		background-attachment: scroll,							scroll,					fixed;
 		/*background-image: url("images/top-3200.svg"), url("images/overlay.png"), url("../images/header.jpg");*/
 		/*background-position: bottom center,					top left,				center center;*/
 		/*background-repeat: repeat-x,						repeat,					no-repeat;*/
 		background-image: url("images/top-3200.svg"), url("images/sethu.jpg"), url("../images/header.jpg");
 		background-position: bottom center,					center center,				center center;
 		background-repeat: no-repeat,						no-repeat,					no-repeat;
-		background-size: cover,					cover,					cover;
+		background-size: 100%,					cover,					cover;
 		color: rgba(255, 255, 255, 0.8);
 		padding: 10em 0 20em 0;
 		position: relative;
